--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(UnoBW.jpg);
+    background-image: url(../UnoBW.jpg);
 	background-repeat: repeat-y;
     background-position: left top;
 	background-size:cover;	
